--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -32,6 +32,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
+            android:layout_marginEnd="56dp"
+            android:layout_marginRight="56dp"
             app:layout="@layout/fragment_navigation_drawer"
             tools:layout="@layout/fragment_navigation_drawer" />
     </android.support.v4.widget.DrawerLayout>
