--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -19,11 +19,18 @@
                 android:id="@+id/app_bar"
                 layout="@layout/app_bar" />
 
-            <TextView
-                android:layout_width="wrap_content"
+            <br.com.cast.treinamento.tabs.SlidingTabLayout
+                android:id="@+id/main_tabs"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/app_bar"
-                android:text="@string/hello_world" />
+                android:layout_below="@id/app_bar" />
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/main_tabs_view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_below="@id/main_tabs" />
         </RelativeLayout>
 
         <fragment
