--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -5,6 +5,7 @@
         <item name="android:colorPrimary">@color/primaryColor</item>
         <item name="android:colorPrimaryDark">@color/primaryColorDark</item>
         <item name="android:colorAccent">@color/accentColor</item>
+        <item name="android:colorControlHighlight">@color/accentColorLight</item>
     </style>
 
 </resources>
