--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -5,7 +5,7 @@
     <style name="AppTheme" parent="AppTheme.Base">
     </style>
     
-    <style name="AppTheme.Base" parent="Theme.AppCompat.NoActionBar">
+    <style name="AppTheme.Base" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/primaryColor</item>
         <item name="colorPrimaryDark">@color/primaryColorDark</item>
         <item name="colorAccent">@color/accentColor</item>
